--- a/form.html
+++ b/form.html
@@ -6,10 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <ul>
-      <li>Sunlight</li>
-      <li>Water</li>
-      <li>Air</li>
-    </ul>
+    <h1>this is a ...</h1>
   </body>
 </html>
